input: accumulate delta for high resolution mice and touchpads

Otherwise, shortcuts like zoom trigger insanely fast.
This could still be improved on, to actually apply the partial delta to shortcuts
where it makes sense (like zoom), but this at least makes it usable.

BUG: 476047